# npz-rs

./: Cargo.toml  README.md
examples/: mmap_large.rs  simple.rs  simple_npz.rs
src/: impl_ndarray.rs  lib.rs  npy.rs  npz.rs
src/npy/: elements.rs  header.rs  mod.rs
src/npy/elements/: complex.rs  mod.rs  primitive.rs
tests/integration/: examples.rs  main.rs  primitive.rs  round_trip.rs
