[package]
name = "npz"
version = "0.1.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KmolYuan/npz-rs"
description = ".npy and .npz file format support for ndarray"
keywords = ["npy", "npz", "ndarray", "numpy", "array"]
categories = ["parser-implementations", "encoding", "science"]
readme = "README.md"
edition = "2021"

[dependencies]
byteorder = "1.3.2"
ndarray = "0.16"
num-complex = { version = "0.4", optional = true }
num-traits = "0.2"
py_literal = "0.4"
zip = { version = "2", default-features = false, optional = true }

[features]
default = ["compressed_npz", "num-complex"]
num-complex = ["dep:num-complex"]
npz = ["zip"]
compressed_npz = ["npz", "zip/deflate"]

[dev-dependencies]
memmap2 = "0.9"
tempfile = "3.2"

[[example]]
name = "simple_npz"
required-features = ["npz"]
