[package]
name = "npz"
version = "0.1.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KmolYuan/npz-rs"
description = ".npy and .npz file format support for std & ndarray & nalgebra"
keywords = ["npy", "npz", "ndarray", "nalgebra", "numpy", "array"]
categories = ["parser-implementations", "encoding", "science"]
readme = "README.md"
edition = "2021"

[dependencies]
byteorder = "1.3.2"
ndarray = { version = "0.16", optional = true }
nalgebra = { version = "0.33", optional = true }
num-complex = { version = "0.4", optional = true }
num-traits = "0.2"
py_literal = "0.4"
zip = { version = "2", default-features = false }

[features]
default = ["compressed-npz", "ndarray", "nalgebra", "num-complex"]
compressed-npz = ["zip/deflate"]
ndarray = ["dep:ndarray"]
nalgebra = ["dep:nalgebra"]
num-complex = ["dep:num-complex"]

[dev-dependencies]
memmap2 = "0.9"
tempfile = "3.2"

[lints.clippy]
semicolon-if-nothing-returned = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
